--- a/index.html
+++ b/index.html
@@ -43,9 +43,13 @@
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
 
-        <div class="modal-body">
+        <div class="modal-body reserve-body">
           <div class="container-fluid">
-            <form id="reserveForm">
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+              Because of COVID-19, some campsites may be closed until August or further notice.
+              <button type="button" class="close" data-dismiss="alert">&times;</button>
+            </div>
+            <form id="reserveForm" onsubmit="return false">
               <div class="row form-group">
                 <label for="numCampers" class="col-sm-6 col-form-label">Number of Campers</label>
                 <div class="col">
@@ -83,7 +87,7 @@
               <div class="row form-group">
                 <div class="col">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                  <button type="submit" class="btn btn-primary">Reserve</button>
+                  <button type="submit" class="btn btn-primary">Search</button>
                 </div>
               </div>
             </form>
@@ -296,6 +300,65 @@
   <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
   <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
   <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script>
+    //copy the default reserve modal and reset it to default state when closed
+    let originalReserve = $("#reserveModal").clone();
+    $("#reserveModal").on("hide.bs.modal", function () {
+      $("#reserveModal").remove();
+      let reserveCopy = originalReserve.clone();
+      $("body").append(reserveCopy);
+    })
+
+    //html to change modal to after clicking submit button
+    let searchHTML = '<div class="container-fluid">' +
+      '<div class="alert alert-warning alert-dismissible fade show" role="alert">' +
+      'Because of COVID-19, some campsites may be closed until August or further notice.' +
+      '<button type="button" class="close" data-dismiss="alert">&times;</button>' +
+      '</div>' +
+      '<div class="row row-content">' +
+      '<div class="col-sm-9">' +
+      '<h2>Facts &amp; Figures</h2>' +
+      '<div class="table-responsive">' +
+      '<table class="table table-striped">' +
+      '<thead>' +
+      '<tr class="bg-primary text-light">' +
+      '<th></th>' +
+      '<th>2016</th>' +
+      '<th>2017</th>' +
+      '<th>2018</th>' +
+      '</tr>' +
+      '</thead>' +
+      '<tbody class="table-primary">' +
+      '<tr>' +
+      '<th>Staff Wilderness Experts</th>' +
+      '<td>10</td>' +
+      '<td>20</td>' +
+      '<td>40</td>' +
+      '</tr>' +
+      '<tr>' +
+      '<th>New Campers</th>' +
+      '<td>256</td>' +
+      '<td>1,280</td>' +
+      '<td>5,360</td>' +
+      '</tr>' +
+      '<tr>' +
+      '<th>Square Miles Covered</th>' +
+      '<td>101,325</td>' +
+      '<td>423,000</td>' +
+      '<td>~3,000,000</td>' +
+      '</tr>' +
+      '</tbody>' +
+      '</table>' +
+      '</div>' +
+      '</div>' +
+      '</div>' +
+      '</div>';
+
+    $("#reserveForm").submit(function () {
+      $(".reserve-body").html(searchHTML);
+    })
+
+  </script>
 
 </body>
 
