--- a/index.html
+++ b/index.html
@@ -254,6 +254,15 @@
             <span class="carousel-control-next-icon"></span>
             <span class="sr-only">Next</span>
           </a>
+
+          <div class="btn-group" id="carouselButton">
+            <button class="btn btn-danger btn-sm" id="carouselPause">
+              <i class="fa fa-pause"> </i>
+            </button>
+            <button class="btn btn-danger btn-sm" id="carouselPlay">
+              <i class="fa fa-play"> </i>
+            </button>
+          </div>
         </div>
       </div>
     </div>
@@ -364,6 +373,19 @@
       $("#reserveForm").removeClass("d-none");
       $("#reserve-table").addClass("d-none");
     })
+
+    //carousel interval to 2000 ms, play and pause button functionality
+    $(function () {
+      $(".carousel").carousel({ interval: 2000 });
+
+      $("#carouselPause").click(function () {
+        $(".carousel").carousel("pause");
+      });
+
+      $("#carouselPlay").click(function () {
+        $(".carousel").carousel("cycle");
+      });
+    });
 
   </script>
 
