--- a/index.html
+++ b/index.html
@@ -255,14 +255,9 @@
             <span class="sr-only">Next</span>
           </a>
 
-          <div class="btn-group" id="carouselButton">
-            <button class="btn btn-danger btn-sm" id="carouselPause">
-              <i class="fa fa-pause"> </i>
-            </button>
-            <button class="btn btn-danger btn-sm" id="carouselPlay">
-              <i class="fa fa-play"> </i>
-            </button>
-          </div>
+          <button class="btn btn-danger btn-sm" id="carouselButton">
+            <i class="fa fa-pause"> </i>
+          </button>
         </div>
       </div>
     </div>
@@ -354,39 +349,42 @@
   <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
   <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   <script>
-    //hide search table and show initial reserve form on opening modal
-    $("#reserve-btn").click(function () {
-      if ($("#reserveForm").hasClass("d-none")) {
-        $("#reserveForm").removeClass("d-none");
-        $("#reserve-table").addClass("d-none");
-      }
-    })
-
-    //show search table in reserve modal after clicking search button
-    $("#reserve-search").click(function () {
-      $("#reserveForm").addClass("d-none");
-      $("#reserve-table").removeClass("d-none");
-    })
-
-    //return to initial form in reserve modal after clicking back button from table view
-    $("#reserve-back").click(function () {
-      $("#reserveForm").removeClass("d-none");
-      $("#reserve-table").addClass("d-none");
-    })
-
-    //carousel interval to 2000 ms, play and pause button functionality
     $(function () {
+      //carousel interval to 2000 ms, play and pause button functionality
       $(".carousel").carousel({ interval: 2000 });
 
-      $("#carouselPause").click(function () {
-        $(".carousel").carousel("pause");
-      });
+      $("#carouselButton").click(function () {
+        if ($("#carouselButton").children("i").hasClass("fa-pause")) {
+          $(".carousel").carousel("pause");
+          $("#carouselButton").children("i").removeClass("fa-pause");
+          $("#carouselButton").children("i").addClass("fa-play");
+        } else {
+          $(".carousel").carousel("cycle");
+          $("#carouselButton").children("i").removeClass("fa-play");
+          $("#carouselButton").children("i").addClass("fa-pause");
+        }
+      })
 
-      $("#carouselPlay").click(function () {
-        $(".carousel").carousel("cycle");
-      });
+      //hide search table and show initial reserve form on opening modal
+      $("#reserve-btn").click(function () {
+        if ($("#reserveForm").hasClass("d-none")) {
+          $("#reserveForm").removeClass("d-none");
+          $("#reserve-table").addClass("d-none");
+        }
+      })
+
+      //show search table in reserve modal after clicking search button
+      $("#reserve-search").click(function () {
+        $("#reserveForm").addClass("d-none");
+        $("#reserve-table").removeClass("d-none");
+      })
+
+      //return to initial form in reserve modal after clicking back button from table view
+      $("#reserve-back").click(function () {
+        $("#reserveForm").removeClass("d-none");
+        $("#reserve-table").addClass("d-none");
+      })
     });
-
   </script>
 
 </body>
